--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,5 +7,6 @@
   </form>
   <br>
   <p><strong>-- OR --</strong></p>
-  <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
+  <p>Hello {{ user.username }}!</p>
+  <a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a>
 {% endblock %}
